syntax = "proto3";

option go_package = "github.com/sungho-cho/covid-spread.viz/backend/proto";

package proto;

service CovidData {
    rpc GetActiveCases(GetActiveCasesRequest) returns (GetActiveCasesResponse) {}
    rpc GetCountriesData(GetCountriesDataRequest) returns (GetCountriesDataResponse) {}
}

message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}

message GetActiveCasesRequest {
    string country = 1;
    Date date = 2;
}

message GetActiveCasesResponse {
    int32 num_cases = 1;
}

message GetCountriesDataRequest {
    Date date = 1;
}

message GetCountriesDataResponse {
    CountriesData date_data = 1;
}

message CountryData {
    Date date = 1;
    int32 confirmed = 2;
    int32 recovered = 3;
    int32 deaths = 4;
}

message CountriesData {
    Date date = 1;
    repeated CountryData countries = 2;
}